# Sego

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Resource/: VK_Global_Data.cpp  VK_Global_Data.h  pch.h  transforstation.cpp
Resource/Bones/: Bone.h  Joint.h
Resource/Data/: Vertex.h
Resource/Data/UI/: ini.h
Resource/Editor/: Sceneobj.cpp  Sceneobj.h  SegoEdit.cpp  UiWindow.h  VKimgui.cpp  VKimgui.h
Resource/Editor/EditorRer/: SceneRe.cpp  SceneRe.hpp  SceneReGird.cpp  SceneReGird.hpp  Sceneobj.cpp  Sceneobj.h
Resource/Editor/Scene/: 11  Sceneobj.cpp  Sceneobj.h
Resource/Lights/: LightConstans.cpp  LightConstans.h  LightCube.h
Resource/Material/: Material.cpp  Material.h  MaterialShadTex.cpp  MaterialShadTex.h  Pot.mat
Resource/Model/: Constants.h  MaterialConstants.h  Model.h
Resource/Model/gltf/: scene.gltf
Resource/Shader/: compile.bat  shader.frag
Resource/Texture/: texture.h
Resource/Texture/Texture2D/: Texture2d.cpp  Texture2d.h
Resource/Texture/TextureCommon/: TextureCommon.cpp  TextureCommon.h
Resource/Vertex/: MeshData.h  MeshVertex.h  Vertex.h
Resource/VulkanPipeLine/: GraphicsPipelineManager.cpp  GraphicsPipelineManager.h
Resource/VulkanStatus/: Pipeline.h
Resource/imgui/: imgui.ini
SGComponent/: component.h  game_object.cpp  game_object.h  transform.cpp  transform.h
SGComponent/Camera/: camera.cpp  camera.h
SGComponent/CameraqRot/: CameraComponent.cpp  CameraComponent.h
SGComponent/Gameobjectinstance/: GameobjectInstance.cpp  GameobjectInstance.h
SGComponent/LightRenderer/: LightRenderer.cpp  LightRenderer.h
SGComponent/MeshFilter/: MeshFilter.cpp  MeshFilter.h
SGComponent/MeshRenderer/: MeshRender.cpp  MeshRender.h
SGData/BasicShapes/Light/: Light.mtl
SGData/BasicShapes/Plane/: Plane.mtl
SGData/Material/: blend.mat  outline.mat  pistol.mat  pot.mat  viking_room.mat
SGData/Material/Light/: Light.mat
SGData/Material/plane/: plane.mat
SGData/Shader/BlinnPhong/: frag.spv  shader.frag  vert.spv
SGData/Shader/Light/: frag.spv  shader.frag  shader.vert  vert.spv
SGData/Shader/blend/: frag.spv  shader.frag  shader.vert  vert.spv
SGData/Shader/outline/: frag.spv  shader.frag  shader.vert  vert.spv
SGData/Shader/pot/: compile.bat  frag.spv  shader.frag  shader.vert
SGData/UI/: ini.h
SGData/imgui/: imgui.ini
SGData/model/gltf/: license.txt
SGobject/: component.h  game_object.cpp  game_object.h  transform.cpp  transform.h
SegoSystem/: Core.h  core.h
SegoSystem/Camera/: camera.cpp  camera.h
SegoSystem/Core/: Bounds.h  shape.cpp  shape.h
SegoSystem/Core/Application/: Application.cpp  Application.h
SegoSystem/Core/Font/: Font.cpp  Font.h
SegoSystem/Core/Material/: Material.cpp  Material.h
SegoSystem/Core/Mesh/: Mesh.cpp  Mesh.h  mesh_fileter.h  mesh_filter.cpp  mesh_renderer.cpp  mesh_renderer.h  vertex_data.h
SegoSystem/Core/Texture2D/: Texture2d.cpp  Texture2d.h
SegoSystem/Device/: device.h
SegoSystem/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
SegoSystem/Layer/: ImguiLayer.cpp  ImguiLayer.h  Layer.h  LayerStack.h
SegoSystem/Log/: Log.cpp  Log.h
SegoSystem/Object/: object.cpp  object.h
SegoSystem/Renderer/SgUI/: GUI.cpp  GUI.h  Sg_UI.cpp  Sg_UI.h  window_Console.cpp  window_Hierarchy.cpp  window_Inspector.cpp  window_Menu.cpp  window_Project.cpp  window_Viewport.cpp
SegoSystem/Renderer/Vulkan/: CMakeLists.txt  GUI.h  Vk_Allocate.cpp  Vk_Allocate.h  Vk_Command.cpp  Vk_Command.h  Vk_Create_Resource.cpp  Vk_Create_Resource.h  Vk_Device_Init.cpp  Vk_Device_Init.h  VulkanInit.h  VulkanRenderer.cpp  VulkanRenderer.h
SegoSystem/Renderer/Vulkan/include/: Vk_Buffer.h  Vk_Console.h  Vk_Descriptor.h  Vk_Image.h  Vk_Memory.h  Vk_Pipeline.h  Vk_Shader.h  Vk_Texture.h
SegoSystem/Renderer/Vulkan/src/: Vk_Buffer.cpp  Vk_Console.cpp  Vk_Descriptor.cpp  Vk_Image.cpp  Vk_Memory.cpp  Vk_Pipeline.cpp  Vk_Shader.cpp  Vk_Texture.cpp
SegoSystem/Renderer/VulkanLayer/: CmakeLists.txt
SegoSystem/Renderer/VulkanLayer/include/: Descript.hpp
SegoSystem/Renderer/VulkanLayer/src/: Descript.cpp
SegoSystem/Renderer/shaders/: shader.frag  shader.vert
SegoSystem/RendererCode/: geometry.h  normal.h
SegoSystem/RendererCode/Light/: Light.h
SegoSystem/SegoIter/: SegoStack.h
SegoSystem/Shader/: Uniform.cpp  Uniform.h
SegoSystem/ThreadPool/: SegoThreadPool.h  imguiThread.cpp  imguiThread.h
SegoSystem/Tips/: time.h
SegoSystem/Window/: Window.cpp  Window.h
SegoSystem/camera/: camera.cpp  camera.h
SegoUI/Imgui/: imgui_impl_vulkan.cpp
